# incolume.py.sorteio-xlsx

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yml  404.html  CHANGELOG.md  LICENSE  README.md  appveyor.yml  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: tests_ci_cd.yaml
about/CHANGELOG/: index.html
about/CONTRIBUTORS/: index.html
about/LICENSE/: index.html
api/: index.html
docs/: index.md  prefacio.md
docs/about/: CHANGELOG.md
docs/api/: index.md
incolume/py/model_2023_07_05/: numbers.py  skell.py
incolume/py/model_2023_07_05/utils/: __init__.py
incolume/py/sorteio_xlsx/: __init__.py  other.py  sorteio.py
incolume/py/sorteio_xlsx/gui/: ft.py  psg.py  tratativa1.py  tratativas.py
incolume/py/sorteio_xlsx/utils/: __init__.py  another.py  numbers.py  other.py
prefacio/: index.html
requirements/: appveyor.txt
tests/: conftest.py  package_test.py  semver_test.py  skell_test.py  sorteio_test.py  test_package.py  test_semver.py  test_skell.py  test_utils.py  test_void.py  utils_test.py  void_test.py
user_guide/COVENTIONAL_COMMITS/: index.html
user_guide/INSTALLATION/: index.html
user_guide/code_of_conduct/: index.html
user_guide/development/: index.html
user_guide/usage/: index.html
user_guide/writing-your-docs/: index.html
user_guide/zenpy/: index.html
